Fixed stretch mistake

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -123,7 +123,6 @@ li:before{
     width: 30%;
 
     min-width: 300px;
-    min-height: 300px;
 }
 
 #galleryYearTitle{
